--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="pt-PT" class="no-js" itemtype="https://schema.org/WebPage" itemscope=""><head>
-	<meta name="facebook-domain-verification" content="i74ig9w1be5e0sia0r2vyc81wvl8s9">
+	<meta name="facebook-domain-verification" content="47rjmmvg61pcvyu016vv29d547t4qp" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<title>eu – Clube Melissa</title>
